--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <p>10 weeks at the biohack academy at the Waag</p>
 
 
-        <p class="view"><a href="https://github.com/Margot2001">View My GitHub Profile</a></p>
+        <p class="view">
+            <a href="https://github.com/Margot2001">View My GitHub Profile</a>
+            <a href="o.html">o</a>
+        </p>
 
       </header>
       <section>
