--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
         <p class="view">
-            <a href="https://github.com/Margot2001">View My GitHub Profile</a><br/>
+            <a href="https://github.com/Margot2001">View My GitHub Profile</a><br>
             <a href="o.html">o</a>
         </p>
 
