--- a/index.html
+++ b/index.html
@@ -27,31 +27,20 @@
       </header>
       <section>
         <h3>
-<a id="10-weeks-biohackacademy" class="anchor" href="#10-weeks-biohackacademy" aria-hidden="true"><span class="octicon octicon-link"></span></a>10 weeks biohackacademy</h3>
+<a id="10-weeks-biohackacademy" class="anchor" href="#10-weeks-biohackacademy" aria-hidden="true"><span class="octicon octicon-link"></span></a>10 weeks biohackacademy</h3><p>It has been an interesting 10 weeks at the Biohack academy. We learned how to build all the machines you could need in a <a href="http://biohackacademy.github.io/bha2/">wetlab</a>.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="incubator" class="anchor" href="#incubator" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>To be honest, for growing <a href="http://biohackacademy.github.io/bha2/annex/culture-collection/">the microbes</a> available at the Waag, you dont really need an incubator, because these organisms will grow quiet easily on room temperature and are not that fragile. The reason that I wanted to make an incubator is to do tests. I want to test if music has influence on the growth of the microbes. And with tests the circumstances always need to be the same. And temperature is one of them. Its finished now, with some help and patience from Pieter. For the moment I am concentrating on making "portraits" and will continue with the tests later.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="Portraits" class="anchor" href="#Portraits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Portraits</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Microbes, mainly bacteria, outnumber human cells in our body by 10 to 1. Scientists have identified 10,000 different species of bacteria, fungi and viruses that live in and on the body. These microbes usually coexist with the human body in peaceful harmony, playing important roles in health, such as aiding digestion and preventing harmful infections. Understanding which microbes live where may help scientists understand how to treat people with disorders, including eczema and digestive disorders, that have been linked to specific kinds of bacteria. 
+These microbial communities are collectively known as the human microbiome.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
