--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 <h3>
 <a id="Portraits" class="anchor" href="#Portraits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Portraits</h3>
 
-<p>Microbes, mainly bacteria, outnumber human cells in our body by 10 to 1. Scientists have identified 10,000 different species of bacteria, fungi and viruses that live in and on the body. These microbes usually coexist with the human body in peaceful harmony, playing important roles in health, such as aiding digestion and preventing harmful infections. Understanding which microbes live where may help scientists understand how to treat people with disorders, including eczema and digestive disorders, that have been linked to specific kinds of bacteria. 
-These microbial communities are collectively known as the human microbiome.</p>
+<p>At the moment I am researching the Microbiome. Microbes, mainly bacteria, outnumber human cells in our body by 10 to 1. Scientists have identified 10,000 different species of bacteria, fungi and viruses that live in and on the body. These microbes usually coexist with the human body in peaceful harmony, playing important roles in health, such as aiding digestion and preventing harmful infections. Understanding which microbes live where may help scientists understand how to treat people with disorders, including eczema and digestive disorders, that have been linked to specific kinds of bacteria. 
+These microbial communities are collectively known as the human microbiome. At the moment I am making "portraits" of my costudents to see how we look like at microbial scale. </p>
 
-
+<h3>
+<a id="Classes" class="anchor" href="#Classes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Classes</h3>
+<p>On the pages on the left I will show pictures of some of the classes we have had during the past 10 weeks.</p> 
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
