--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <h3>
 <a id="10-weeks-biohackacademy" class="anchor" href="#10-weeks-biohackacademy" aria-hidden="true"><span class="octicon octicon-link"></span></a>10 weeks biohackacademy</h3><p>It has been an interesting 10 weeks at the Biohack academy. We learned how to build all the machines you could need in a <a href="http://biohackacademy.github.io/bha2/">wetlab</a>.</p>
 
-<h3>
-<a id="incubator" class="anchor" href="#incubator" aria-hidden="true"><span class="octicon octicon-link"></span></a></h3>
 
-<p>To be honest, for growing <a href="http://biohackacademy.github.io/bha2/annex/culture-collection/">the microbes</a> available at the Waag, you dont really need an incubator, because these organisms will grow quiet easily on room temperature and are not that fragile. The reason that I wanted to make an incubator is to do tests. I want to test if music has influence on the growth of the microbes. And with tests the circumstances always need to be the same. And temperature is one of them. Its finished now, with some help and patience from Pieter. For the moment I am concentrating on making "portraits" and will continue with the tests later.</p>
+<h3>
+<a id="Incubator" class="anchor" href="#Incubator" aria-hidden="true"><span class="octicon octicon-link"></span></a>Incubator</h3>
+<p>To be honest, for growing <a href="http://biohackacademy.github.io/bha2/annex/culture-collection/">the microbes</a> available at the Waag, you dont really need an incubator, because these organisms will grow quiet easily on room temperature and are not that fragile. The reason that I wanted to make an incubator is to do tests. I want to test if music has influence on the growth of the microbes. And with tests the circumstances always need to be the same. It is finally finished now, with some help and patience from Pieter. For the moment I am concentrating on making "portraits" and will continue with the tests later.</p>
 
 <h3>
 <a id="Portraits" class="anchor" href="#Portraits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Portraits</h3>
