--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
       <section>
         <h3>
-<a id="10-weeks-biohackacademy" class="anchor" href="#10-weeks-biohackacademy" aria-hidden="true"><span class="octicon octicon-link"></span></a>10 weeks biohackacademy</h3><p>It has been an interesting 10 weeks at the Biohack academy. We learned how to build all the machines you could need in a <a href="http://biohackacademy.github.io/bha2/">wetlab</a>.</p>
+<a id="10-weeks-biohackacademy" class="anchor" href="#10-weeks-biohackacademy" aria-hidden="true"><span class="octicon octicon-link"></span></a>10 weeks biohackacademy</h3><p>It has been an interesting 10 weeks at the Biohack academy. We learned about microbes, cells, Dna - Rna - Proteins, the latest gene-editing technology <a href="http://www.nature.com/news/crispr-the-disruptor-1.17673">CRISPR</a>, and how to build all the machines you could need in a <a href="http://biohackacademy.github.io/bha2/">wetlab</a>.</p>
 
 
 <h3>
