--- a/stainingcells.html
+++ b/stainingcells.html
@@ -21,7 +21,7 @@
 
         <p class="view">
             <a href="https://github.com/Margot2001">View My GitHub Profile</a><br>
-            <a href="o.html">o</a>
+            <a href="stainingcells.html">Staining cells</a>
         </p>
 
       </header>
@@ -29,12 +29,25 @@
         <h3>
 <a id="Staining cells" class="anchor" href="#Staining-cells" aria-hidden="true"><span class="octicon octicon-link"></span></a>staining cells</h3>
 
-<h3>
+<img src="images/IMG_9135.jpg"><br>
+<p>Put a small droplet of water on a object slide.</p>
+<img src="images/IMG_9139.jpg"><br>
 
-<img src="images/IMG_9132.jpg">
-<p>In this class we learned how to prepare microscopic slides.Here we learn how to visualize the cell of the onion. First you cut a very thin piece of onion, if the layer gets to think you get too many cells and it will be more difficult to see a single cell. </p>
-
-
+<p>In this case we used an onion. Using a sharp knife, cut out about 1 cm² of onion material. </p>
+<img src="images/IMG_9137.jpg"><br>
+<p> Tim at work, excellent bit of cutting. </p>
+<img src="images/IMG_9142.jpg"><br>
+<p>Yasemin showing her slide</p><br>
+<img src="images/IMG_9147.jpg"><br>
+<p>Place the skin into pure alcohol for about 30 seconds. This procedure removes water from the cells.
+Stain the sample by a droplet of crystal violet and let it stain for max 60 seconds. </p>
+<img src="images/IMG_9151.jpg"><br>
+<img src="images/IMG_9159.jpg"><br>
+<img src="images/IMG_9160.jpg"><br>
+<img src="images/IMG_9161.jpg"><br>
+<img src="images/IMG_9165.jpg"><br>
+<img src="images/IMG_9166.jpg"><br>
+<p>Result! </p>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
