--- a/stainingcells.html
+++ b/stainingcells.html
@@ -47,7 +47,7 @@ Stain the sample by a droplet of crystal violet and let it stain for max 60 seco
 <img src="images/IMG_9161.jpg"><br>
 <img src="images/IMG_9165.jpg"><br>
 <img src="images/IMG_9166.jpg"><br>
-<p>Result! </p>
+<p>Result! This worked really well, you can see the cells as well as the nuclei.</p>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
