--- a/stainingcells.html
+++ b/stainingcells.html
@@ -43,7 +43,8 @@
 Stain the sample by a droplet of crystal violet and let it stain for max 60 seconds. </p>
 <img src="images/IMG_9151.jpg"><br>
 <img src="images/IMG_9159.jpg"><br>
-<img src="images/IMG_9160.jpg"><br>
+The piece of onion was a bit too thick so its difficult to see the cells. Looks nice though. 
+
 <img src="images/IMG_9161.jpg"><br>
 <img src="images/IMG_9165.jpg"><br>
 <img src="images/IMG_9166.jpg"><br>
