--- a/stainingcells.html
+++ b/stainingcells.html
@@ -33,7 +33,7 @@
 <p>Put a small droplet of water on a object slide.</p>
 <img src="images/IMG_9139.jpg"><br>
 
-<p>In this case we used an onion. Using a sharp knife, cut out about 1 cm² of onion material. </p>
+<p>In this case we used an onion. Cut a very thin layer of onion and put it on the slide </p>
 <img src="images/IMG_9137.jpg"><br>
 <p> Tim at work, excellent bit of cutting. </p>
 <img src="images/IMG_9142.jpg"><br>
