--- a/stainingcells.html
+++ b/stainingcells.html
@@ -40,7 +40,7 @@
 <p>Yasemin showing her slide</p><br>
 <img src="images/IMG_9147.jpg"><br>
 <p>
-Stain the sample by a droplet of crystal violet and let it stain for max 60 seconds. </p>
+Stain the sample by a droplet of crystal violet and let it stain for max 60 seconds.Wash it off with tap water </p>
 <img src="images/IMG_9151.jpg"><br>
 <img src="images/IMG_9159.jpg"><br>
 The piece of onion was a bit too thick so its difficult to see the cells. Looks nice though. 
