--- a/stainingcells.html
+++ b/stainingcells.html
@@ -48,7 +48,8 @@ The piece of onion was a bit too thick so its difficult to see the cells. Looks 
 <img src="images/IMG_9161.jpg"><br>
 <img src="images/IMG_9165.jpg"><br>
 <img src="images/IMG_9166.jpg"><br>
-<p>Result! This worked really well, you can see the cells as well as the nuclei.</p>
+<p>Result! This worked really well, you can see the cells as well as the nuclei.<br>
+<a href="http://biohackacademy.github.io/bha2/class/4/">Here</a>you can find everything about optics, how to build your own microscope and how to stain cells. </p>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
