--- a/stainingcells.html
+++ b/stainingcells.html
@@ -22,6 +22,7 @@
         <p class="view">
             <a href="https://github.com/Margot2001">View My GitHub Profile</a><br>
             <a href="stainingcells.html">Staining cells</a>
+            <a href="index.html">Homepage</a>
         </p>
 
       </header>
