--- a/stainingcells.html
+++ b/stainingcells.html
@@ -21,7 +21,7 @@
 
         <p class="view">
             <a href="https://github.com/Margot2001">View My GitHub Profile</a><br>
-            <a href="stainingcells.html">Staining cells</a>
+            <a href="stainingcells.html">Staining cells</a><br>
             <a href="index.html">Homepage</a>
         </p>
 
