--- a/stainingcells.html
+++ b/stainingcells.html
@@ -28,7 +28,7 @@
       </header>
       <section>
         <h3>
-<a id="Staining cells" class="anchor" href="#Staining-cells" aria-hidden="true"><span class="octicon octicon-link"></span></a>staining cells</h3>
+<a id="Staining cells" class="anchor" href="#Staining-cells" aria-hidden="true"><span class="octicon octicon-link"></span></a>Class 4 - Optics</h3>
 
 <img src="images/IMG_9135.jpg"><br>
 <p>Put a small droplet of water on a object slide.</p>
