--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
         <p class="view">
             <a href="https://github.com/Margot2001">View My GitHub Profile</a><br>
-            <a href="stainingcells.html">Staining cells</a>
+            <a href="stainingcells.html">Staining cells</a><br>
+            <a href="Chloroplast">Chloroplast Isolation</a><br>
+            
         </p>
 
       </header>
