--- a/Chloroplast.html
+++ b/Chloroplast.html
@@ -32,7 +32,29 @@
 <a id="Class 7 - Bioethics" class="anchor" href="#SClass 7 - Bioethics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Class 7 - Bioethics <br> Choloroplast Isolation</h3>
 
 <img src="images/IMG_9755.jpg"><br>
-        
+<p>You take some spinach, but you could also find them in other plant and algae.</p>
+<img src="images/IMG_9704.jpg"><br>
+<p>Chloroplasts are organelles, specialized subunits, in plant and algal cells.Chloroplasts' main role is to conduct photosynthesis, where the photosynthetic pigment chlorophyll captures the energy from sunlight and converts it and stores it in the energy-storage molecules ATP and NADPH while freeing oxygen from water. They then use the ATP and NADPH to make organic molecules from carbon dioxide in a process known as the Calvin cycle. The rest you can google, our favourite tutor ;)</p>
+<img src="images/IMG_9704.jpg"><br>
+<p>Chop the leaves as small as possible</p>
+<img src="images/IMG_9705.jpg"><br>
+<p>put this mash on some paper. We used lab paper, but that is quite expensive. We couldnt think of another cheaper paper. sorry.</p>
+<P>Next you can test which medium will break the cell of the spinach best</P>
+<img src="images/IMG_9706.jpg"><br>
+<img src="images/IMG_9707.jpg"><br>
+<img src="images/IMG_9708.jpg"><br>
+<img src="images/IMG_9709.jpg"><br>
+<img src="images/IMG_9710.jpg"><br>
+<img src="images/IMG_9711.jpg"><br>
+<img src="images/IMG_9712.jpg"><br>
+<img src="images/IMG_9715.jpg"><br>
+<img src="images/IMG_9716.jpg"><br>
+<img src="images/IMG_9720.jpg"><br>
+<img src="images/IMG_9723.jpg"><br>
+<img src="images/IMG_9728.jpg"><br>
+<img src="images/IMG_9729.jpg"><br>
+<p>As you can see, aceton works best.</p>
+
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
