--- a/Chloroplast.html
+++ b/Chloroplast.html
@@ -32,9 +32,9 @@
 <a id="Class 7 - Bioethics" class="anchor" href="#SClass 7 - Bioethics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Class 7 - Bioethics <br> Choloroplast Isolation</h3>
 
 <img src="images/IMG_9755.jpg"><br>
-<p>You take some spinach, but you could also find them in other plant and algae.</p>
+<p>What is in this leave of spinach?</p>
 <img src="images/IMG_9704.jpg"><br>
-<p>Chloroplasts are organelles, specialized subunits, in plant and algal cells.Chloroplasts' main role is to conduct photosynthesis, where the photosynthetic pigment chlorophyll captures the energy from sunlight and converts it and stores it in the energy-storage molecules ATP and NADPH while freeing oxygen from water. They then use the ATP and NADPH to make organic molecules from carbon dioxide in a process known as the Calvin cycle. The rest you can google, our favourite tutor ;)</p>
+<p>Many things!, one of which is chloroplast. Chloroplasts are organelles, specialized subunits, in plant and algal cells.Chloroplasts' main role is to conduct photosynthesis, where the photosynthetic pigment chlorophyll captures the energy from sunlight and converts it and stores it in the energy-storage molecules ATP and NADPH while freeing oxygen from water. They then use the ATP and NADPH to make organic molecules from carbon dioxide in a process known as the Calvin cycle. The rest you can google, our favourite tutor ;)</p>
 <img src="images/IMG_9704.jpg"><br>
 <p>Chop the leaves as small as possible</p>
 <img src="images/IMG_9705.jpg"><br>
