--- a/Chloroplast.html
+++ b/Chloroplast.html
@@ -38,7 +38,7 @@
 <img src="images/IMG_9731.jpg"><br>
 <p>Chop the leaves as small as possible</p>
 <img src="images/IMG_9705.jpg"><br>
-<p>put this mash on some paper. We used lab paper, but that is quite expensive. We couldnt think of another cheaper paper. sorry.</p>
+<p>Out this mash on some paper. We used lab filter paper, but that is quite expensive. We couldnt think of another cheaper paper. sorry.</p>
 <P>Next you can test which medium will break the cell of the spinach best</P>
 <img src="images/IMG_9706.jpg"><br>
 <img src="images/IMG_9707.jpg"><br>
