--- a/Chloroplast.html
+++ b/Chloroplast.html
@@ -53,6 +53,7 @@
 <img src="images/IMG_9723.jpg"><br>
 <img src="images/IMG_9728.jpg"><br>
 <img src="images/IMG_9729.jpg"><br>
+<img src="images/IMG_9737.jpg"><br>
 <p>As you can see, aceton works best.</p>
 
     </div>
