--- a/Chloroplast.html
+++ b/Chloroplast.html
@@ -39,7 +39,7 @@
 <p>Chop the leaves as small as possible</p>
 <img src="images/IMG_9705.jpg"><br>
 <p>Out this mash on some paper. We used lab filter paper, but that is quite expensive. We couldnt think of another cheaper paper. sorry.</p>
-<P>Next you can test which medium will break the cell of the spinach best</P>
+<P>Next we tested which medium breaks the cell of the spinach best so the chloroplasts can escape.</P>
 <img src="images/IMG_9706.jpg"><br>
 <img src="images/IMG_9707.jpg"><br>
 <img src="images/IMG_9708.jpg"><br>
@@ -54,7 +54,26 @@
 <img src="images/IMG_9728.jpg"><br>
 <img src="images/IMG_9729.jpg"><br>
 <img src="images/IMG_9737.jpg"><br>
-<p>As you can see, aceton works best.</p>
+<img src="images/IMG_9739.jpg"><br>
+<img src="images/IMG_9750.jpg"><br>
+<p>As you can see, aceton works best.</P><br>
+<img src="images/IMG_9738.jpg"><br>
+<P>Of the other mash, transfer two times 2 mL to two centrifuge tubes, make sure they’re balanced, otherwise the centrifuge starts to wobble. Pieter used the digital scale to be sure. </p>
+<img src="images/IMG_9732.jpg"><br>
+<P>Centrifuge at low speed (50x - 200x g) for 3 - 10 minutes to get rid of cell debris (white pellet)</P>
+<img src="images/IMG_9741.jpg"><br>
+<img src="images/IMG_9743.jpg"><br>
+<P>Transfer the supernatant to two fresh centrifuge tubes, save 0.5 mL of each tube for later examination. Centrifuge at high speed (1000x g) for 10 minutes to pellet the chloroplasts. </P>
+<img src="images/IMG_9748.jpg"><br>
+<P>Dispose the supernatant when you feel satisfied with the pellet, spin longer if you feel like it</P>
+<img src="images/IMG_9760.jpg"><br>
+<img src="images/IMG_9758.jpg"><br>
+<img src="images/IMG_9761.jpg"><br>
+<img src="images/IMG_9757.jpg"><br>
+<img src="images/IMG_9762.jpg"><br>
+<img src="images/IMG_9764.jpg"><br>
+<P>Resuspend the pellet in 0.5 mL 80% acetone. Examine the samples under the microscope and/or measure the absorbance at OD650. You can count the number of Chloroplasts per mL. We didnt count them though... <br>
+Find the whole protocol <a href="http://biohackacademy.github.io/bha2/class/7/chloroplast-isolation/">here</a><br></P>
 
     </div>
     <script src="javascripts/scale.fix.js"></script>
