--- a/Chloroplast.html
+++ b/Chloroplast.html
@@ -34,11 +34,12 @@
 <img src="images/IMG_9755.jpg"><br>
 <p>What is in this leave of spinach?</p>
 <img src="images/IMG_9704.jpg"><br>
-<p>Many things!, one of which is chloroplast. Chloroplasts are organelles, specialized subunits, in plant and algal cells.Chloroplasts' main role is to conduct photosynthesis, where the photosynthetic pigment chlorophyll captures the energy from sunlight and converts it and stores it in the energy-storage molecules ATP and NADPH while freeing oxygen from water. They then use the ATP and NADPH to make organic molecules from carbon dioxide in a process known as the Calvin cycle. The rest you can google, our favourite tutor ;)</p>
+<p>Many things! And one of them is chloroplast. <br>
+Chloroplasts are organelles, specialized subunits, in plant and algal cells.Chloroplasts' main role is to conduct photosynthesis, where the photosynthetic pigment chlorophyll captures the energy from sunlight and converts it and stores it in the energy-storage molecules ATP and NADPH while freeing oxygen from water. They then use the ATP and NADPH to make organic molecules from carbon dioxide in a process known as the Calvin cycle. The rest you can google, our favourite tutor ;)</p>
 <img src="images/IMG_9731.jpg"><br>
 <p>Chop the leaves as small as possible</p>
 <img src="images/IMG_9705.jpg"><br>
-<p>Out this mash on some paper. We used lab filter paper, but that is quite expensive. We couldnt think of another cheaper paper. sorry.</p>
+<p>Put this mash on some paper. We used lab filter paper, but that is quite expensive. We couldnt think of another cheaper paper. sorry.</p>
 <P>Next we tested which medium breaks the cell of the spinach best so the chloroplasts can escape.</P>
 <img src="images/IMG_9706.jpg"><br>
 <img src="images/IMG_9707.jpg"><br>
