--- a/stainingcells.html
+++ b/stainingcells.html
@@ -34,7 +34,7 @@
 <p>Put a small droplet of water on a object slide.</p>
 <img src="images/IMG_9139.jpg"><br>
 
-<p>In this case we used an onion. Cut a very thin layer of onion and put it on the slide </p>
+<p>Put a very thin layer of onion on the slide </p>
 <img src="images/IMG_9137.jpg"><br>
 <p> Tim at work, excellent bit of cutting. </p>
 <img src="images/IMG_9142.jpg"><br>
