--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="view">
             <a href="https://github.com/Margot2001">View My GitHub Profile</a><br>
             <a href="stainingcells.html">Staining cells</a><br>
-            <a href="Chloroplast">Chloroplast Isolation</a><br>
+            <a href="Chloroplast.html">Chloroplast Isolation</a><br>
             
         </p>
 
