--- a/Chloroplast.html
+++ b/Chloroplast.html
@@ -22,7 +22,7 @@
         <p class="view">
             <a href="https://github.com/Margot2001">View My GitHub Profile</a><br>
             <a href="stainingcells.html">Staining cells</a><br>
-            <a href="Index.html">Homepage</a><br>
+            <a href="index.html">Homepage</a><br>
             
         </p>
       
