--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://github.com/Margot2001">View My GitHub Profile</a><br>
             <a href="stainingcells.html">Staining cells</a><br>
             <a href="Chloroplast.html">Chloroplast Isolation</a><br>
-            <p><b>CC BY 4.0</p></b>
+            <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons-Licentie" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Dit werk valt onder een <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Naamsvermelding 4.0 Internationaal-licentie</a>.</p>
             
         </p>
 
