--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ These microbial communities are collectively known as the human microbiome. At t
 <h3>
 <a id="Classes" class="anchor" href="#Classes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Classes</h3>
 <p>On the pages on the left you can find pictures of some of the classes we have had during the past 10 weeks.</p> 
-<img src="images/IMG_microbiome.jpg"
+<img src="images/IMG_microbiome.jpg">
+
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
