--- a/portraits.html
+++ b/portraits.html
@@ -37,7 +37,7 @@ Microbes, mainly bacteria, outnumber human cells in our body by 10 to 1. Scienti
 <h3>
 <a id="Unique Identifier" class="anchor" href="#Unique identifier" aria-hidden="true"><span class="octicon octicon-link"></span></a>Unique Identifier</h3>
 
-<p>What is very interesting is the the microbiome could be used as a "unique identifier".
+<p>Another thing about the microbiome that is very interesting is that the microbiome could be used as a "unique identifier".
 Like the scientist says in <a href="http://www.the-scientist.com/?articles.view/articleNo/31755/title/Who-Are-We-Really-/">this article</a>, it has quite a few consequences. <br>
 "A key premise of some microbiome researchers is that the human genome coevolved with the genomes of countless microbial species. If this is the case, it raises deep questions about our understanding of what it really means to be human. Typically, we draw a distinction between environmental and genetic factors in understanding human traits and the development of disease. What precisely is meant by “environmental” varies dramatically across disciplines. Irrespective of how environmental factors are conceptualized in a given study, a common focus is their interaction with stable genetic factors. Traditionally, the microbial communities in and around us would be counted towards the environmental, rather than the genetic side of this equation. Given recent findings from human microbiome research, however, this classification may need to be reconsidered. If the microbiome, on a species level, coevolved with the human genome and, on an individual level, is a unique and enduring component of biological identity, then the microbiome may need to be thought of more as “a part of us” than as a part of the environment."<br>
 </p>
