--- a/portraits.html
+++ b/portraits.html
@@ -40,9 +40,40 @@ Microbes, mainly bacteria, outnumber human cells in our body by 10 to 1. Scienti
 <p>Another thing about the microbiome that is very interesting is that the microbiome could be used as a "unique identifier".
 Like the scientist says in <a href="http://www.the-scientist.com/?articles.view/articleNo/31755/title/Who-Are-We-Really-/">this article</a>, it has quite a few consequences. <br>
 "A key premise of some microbiome researchers is that the human genome coevolved with the genomes of countless microbial species. If this is the case, it raises deep questions about our understanding of what it really means to be human. Typically, we draw a distinction between environmental and genetic factors in understanding human traits and the development of disease. What precisely is meant by “environmental” varies dramatically across disciplines. Irrespective of how environmental factors are conceptualized in a given study, a common focus is their interaction with stable genetic factors. Traditionally, the microbial communities in and around us would be counted towards the environmental, rather than the genetic side of this equation. Given recent findings from human microbiome research, however, this classification may need to be reconsidered. If the microbiome, on a species level, coevolved with the human genome and, on an individual level, is a unique and enduring component of biological identity, then the microbiome may need to be thought of more as “a part of us” than as a part of the environment."<br>
+<br>
+This made me interested in the idea of making portraits of people on a microbial level. <br>
+I started with trying to see what would grow from just hair. If you put a hair in a petridish you have the problem that contamination occurs. Contamination means that the thing you are growing could be anything. When you grow things in petridishes you try to work as sterile as possible with a gasburner and you clean all your utensils with alcohol, so that you know what you are growing and not some kind of general bacterie from the air. That in itself is difficult enough but with hair it is even more difficult. Here are some pictures.<br> 
+<img src="images/IMG_9479.jpg"><br>
+<img src="images/IMG_9781.jpg"><br>
+<img src="images/IMG_9787.jpg"><br>
+<br>
+Next I <a href="http://www.wired.co.uk/news/archive/2009-06/01/the-parts-of-the-human-body-bacteria-love-to-live-in">read</a> that the most diversity of microbes live on your forearm. On average, 44 different types of bacteria reside on the forearm, compared with 19 species living behind the ear. So I took some samples of my friendly costudents and here are some results. <br>
+<img src="images/IMG_0141.jpg"><br>
+From the arm of Erwin <br>
+<img src="images/IMG_0145.jpg"><br>
+From the arm of myself<br>
+<img src="images/IMG_0161.jpg"><br>
+From the arm of Manon
+<img src="images/IMG_9787.jpg"><br>
+And the arm of Yasemin<br>
+In the end I decided that the best way to make a portrait would be to get a sample from all the parts of the body. That was not feasible. Instead, for the final portraits, I took a sample of the forearm, some saliva and a hair. These are the final portraits from the people available at that time in de Waag. There is a problem with these portraits, they can not be complete, because not all organisms will grow in a petridish. Actually, most of them wont grow in a petridish, so what we see in these portraits is just a small sample of the amazing bioactivity on and in our bodies. I will keep working on this project, and I will keep you posted on my other website. Thanks for reading. 
+<img src="images/IMG_0153.jpg"><br>
+Portrait of Pieter<br>
+<img src="images/IMG_0374.jpg"><br>
+Portrait of Yasemin<br>
+<img src="images/IMG_9478.jpg"><br>
+Portrait of Manon<br>
+<img src="images/IMG.0411.jpg"><br>
+Portrait of myself<br>
+<br>
+I have spent a lot of time photographing the details of the growing portraits, some of them you can see below. I am planning to make a little book with them. A long time ago I made another little <a href="http://margotvanham.wix.com/patternsbook">book</a> about revolving patterns in nature, where I play with the concept of micro and macro patterns and will do something similar with the pictures of these microbes. The close-ups were made possible because Bas Uterwijk was so kind to lend me his macrolens. Thanks again Bas ;).<br>
+<img src="images/IMG_0226.jpg"><br>
+<img src="images/IMG_0256.jpg"><br>
+<img src="images/IMG_0320.jpg"><br>
+<img src="images/IMG_0321.jpg"><br>
+<img src="images/IMG_0324.jpg"><br>
+<img src="images/IMG_0346.jpg"><br>
 </p>
-
-
 
 
     </div>
