--- a/portraits.html
+++ b/portraits.html
@@ -62,7 +62,7 @@ Portrait of Pieter<br>
 Portrait of Yasemin<br>
 <img src="images/IMG_9478.jpg"><br>
 Portrait of Manon<br>
-<img src="images/IMG.0411.jpg"><br>
+<img src="images/IMG_0411.jpg"><br>
 Portrait of myself<br>
 <br>
 I have spent a lot of time photographing the details of the growing portraits, some of them you can see below. I am planning to make a little book with them. A long time ago I made another little <a href="http://margotvanham.wix.com/patternsbook">book</a> about revolving patterns in nature, where I play with the concept of micro and macro patterns and will do something similar with the pictures of these microbes. The close-ups were made possible because <a href="http://www.basuterwijk.com/#!/index">Bas Uterwijk</a> was so kind to lend me his macrolens. Thanks again Bas ;).<br>
