--- a/portraits.html
+++ b/portraits.html
@@ -46,16 +46,16 @@ I started with experimenting by seeing what would grow from hair. If you put a h
 <img src="images/IMG_9781.jpg"><br>
 <img src="images/IMG_9787.jpg"><br>
 <br>
-Next I <a href="http://www.wired.co.uk/news/archive/2009-06/01/the-parts-of-the-human-body-bacteria-love-to-live-in">read</a> that the most diversity of microbes live on your forearm. On average, 44 different types of bacteria reside on the forearm, compared with 19 species living behind the ear. So I took some samples of my friendly costudents and here are some results. <br>
+Next I <a href="http://www.wired.co.uk/news/archive/2009-06/01/the-parts-of-the-human-body-bacteria-love-to-live-in">read</a> that the most diversity of microbes live on your forearm. On average, 44 different types of bacteria reside on the forearm, compared with 19 species living behind the ear. So I took some samples of my friendly costudents.<br><br>
 <img src="images/IMG_0141.jpg"><br>
 From the arm of Erwin <br>
 <img src="images/IMG_0145.jpg"><br>
 From the arm of myself<br>
 <img src="images/IMG_0161.jpg"><br>
-From the arm of Manon<br>
-<img src="images/IMG_9787.jpg"><br>
-And the arm of Yasemin<br>
-In the end I decided that the best way to make a portrait would be to get a sample from all the parts of the body. That was not feasible. Instead, for the final portraits, I took a sample of the forearm, some saliva and a hair. These are the final portraits from the people available at that time in de Waag. There is a problem with these portraits, they can not be complete, because not all organisms will grow in a petridish. Actually, most of them wont grow in a petridish, so what we see in these portraits is just a small sample of the amazing bioactivity on and in our bodies. I will keep working on this project, and I will keep you posted on my other website. Thanks for reading.<br> 
+And the arm of Manon<br>
+In the end I decided that the best way to make a portrait would be to get a sample from all the parts of the body. That was not feasible. Instead, for the final portraits, I took a sample of the forearm, some saliva and a hair. These are the final portraits from the people available at that time in de Waag. There is a problem with these portraits, they can not be complete, because not all organisms will grow in a petridish. Actually, most of them wont grow in a petridish, so what we see in these portraits is just a small sample of the amazing bioactivity on and in our bodies. I will keep working on this project, and I will keep you posted on my other website.<br>
+<h3>
+<a id="Final Portraits" class="anchor" href="#Final Portraits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Final Portraits</h3>
 <img src="images/IMG_0153.jpg"><br>
 Portrait of Pieter<br>
 <img src="images/IMG_0374.jpg"><br>
@@ -66,9 +66,13 @@ Portrait of Manon<br>
 Portrait of myself<br>
 <br>
 I have spent a lot of time photographing the details of the growing portraits, some of them you can see below. I am planning to make a little book with them. A long time ago I made another little <a href="http://margotvanham.wix.com/patterns">book</a> about revolving patterns in nature, where I play with the concept of micro and macro patterns and will do something similar with the pictures of these microbes. The close-ups were made possible because <a href="http://www.basuterwijk.com/#!/index">Bas Uterwijk</a> was so kind to lend me his macrolens. Thanks again Bas ;).<br>
+<img src="images/IMG_0103.jpg"><br>
 <img src="images/IMG_0226.jpg"><br>
 <img src="images/IMG_0256.jpg"><br>
+<img src="images/IMG_0205.jpg"><br>
 <img src="images/IMG_0320.jpg"><br>
+<img src="images/IMG_0223.jpg"><br>
+<img src="images/IMG_0201.jpg"><br>
 <img src="images/IMG_0321.jpg"><br>
 <img src="images/IMG_0324.jpg"><br>
 <img src="images/IMG_0346.jpg"><br>
