--- a/portraits.html
+++ b/portraits.html
@@ -29,7 +29,7 @@
             <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
       </header>
       <section><h3>
-<a id="Portraits" class="anchor" href="#Portraits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Portraits</h3><p><br>
+<a id="The Microbiome" class="anchor" href="#Microbiome" aria-hidden="true"><span class="octicon octicon-link"></span></a>the microbiome</h3><p><br>
 Microbes, mainly bacteria, outnumber human cells in our body by 10 to 1. Scientists have so far identified 10,000 different species of bacteria, fungi and viruses that live in and on the body. These microbes usually coexist with the human body in peaceful harmony, playing important roles in health, such as aiding digestion and preventing harmful infections. Understanding which microbes live where may help scientists understand how to treat people with disorders, including eczema and digestive disorders, that have been linked to specific kinds of bacteria. These microbial communities are collectively known as <a href="http://http://hmpdacc.org/">the Human Microbiome</a><br>
 
 
