--- a/portraits.html
+++ b/portraits.html
@@ -29,15 +29,15 @@
             <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
       </header>
       <section><h3>
-<a id="The Microbiome" class="anchor" href="#Microbiome" aria-hidden="true"><span class="octicon octicon-link"></span></a>the microbiome</h3><p><br>
+<a id="The Microbiome" class="anchor" href="#Microbiome" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Microbiome</h3><p><br>
 Microbes, mainly bacteria, outnumber human cells in our body by 10 to 1. Scientists have so far identified 10,000 different species of bacteria, fungi and viruses that live in and on the body. These microbes usually coexist with the human body in peaceful harmony, playing important roles in health, such as aiding digestion and preventing harmful infections. Understanding which microbes live where may help scientists understand how to treat people with disorders, including eczema and digestive disorders, that have been linked to specific kinds of bacteria. These microbial communities are collectively known as <a href="http://http://hmpdacc.org/">the Human Microbiome</a><br>
 
 
 
 <h3>
-<a id="Unique Identifier" class="anchor" href="#Unique identifier" aria-hidden="true"><span class="octicon octicon-link"></span></a>Unique Identifier</h3>
+<a id="Unique Identifier" class="anchor" href="#Unique identifier" aria-hidden="true"><span class="octicon octicon-link"></span></a>Microbial fingerprint</h3>
 
-<p>The microbiome could be used as a "unique identifier".Like the scientist says in <a href="http://www.the-scientist.com/?articles.view/articleNo/31755/title/Who-Are-We-Really-/">this article</a>, it has quite a few consequences. <br>
+<p>Scientists reported that they were able to identify unique microbial "fingerprints" for more than one hundred participants of the Human Microbiome Project. Like the scientist says in <a href="http://www.the-scientist.com/?articles.view/articleNo/31755/title/Who-Are-We-Really-/">this article</a>, it has quite a few consequences. <br>
 "A key premise of some microbiome researchers is that the human genome coevolved with the genomes of countless microbial species. If this is the case, it raises deep questions about our understanding of what it really means to be human. Typically, we draw a distinction between environmental and genetic factors in understanding human traits and the development of disease. What precisely is meant by “environmental” varies dramatically across disciplines. Irrespective of how environmental factors are conceptualized in a given study, a common focus is their interaction with stable genetic factors. Traditionally, the microbial communities in and around us would be counted towards the environmental, rather than the genetic side of this equation. Given recent findings from human microbiome research, however, this classification may need to be reconsidered. If the microbiome, on a species level, coevolved with the human genome and, on an individual level, is a unique and enduring component of biological identity, then the microbiome may need to be thought of more as “a part of us” than as a part of the environment."<br>
 <br>
 So we used to think of the unique identifier as the face, later our DNA and now we also have the microbiome. This made me interested in the idea of making portraits of people on a microbial level. <br>
