--- a/portraits.html
+++ b/portraits.html
@@ -41,21 +41,23 @@ Microbes, mainly bacteria, outnumber human cells in our body by 10 to 1. Scienti
 "A key premise of some microbiome researchers is that the human genome coevolved with the genomes of countless microbial species. If this is the case, it raises deep questions about our understanding of what it really means to be human. Typically, we draw a distinction between environmental and genetic factors in understanding human traits and the development of disease. What precisely is meant by “environmental” varies dramatically across disciplines. Irrespective of how environmental factors are conceptualized in a given study, a common focus is their interaction with stable genetic factors. Traditionally, the microbial communities in and around us would be counted towards the environmental, rather than the genetic side of this equation. Given recent findings from human microbiome research, however, this classification may need to be reconsidered. If the microbiome, on a species level, coevolved with the human genome and, on an individual level, is a unique and enduring component of biological identity, then the microbiome may need to be thought of more as “a part of us” than as a part of the environment."<br>
 <br>
 This made me interested in the idea of making portraits of people on a microbial level. <br>
-I started with experimenting by seeing what would grow from hair. If you put a hair in a petridish you have the problem that contamination occurs more easily then it would be by growing something small. Contamination means that you are growing something from the air or from your fingers instead of the bacterium of fungi you were aiming for. When you inoculate things in petridishes you try to work as sterile as possible with a gasburner and by cleaning all your utensils with alcohol. So even though I was afraid for contamination, the outcome was quite good. <br><br> 
+I started with experimenting by seeing what would grow from hair. If you put a hair in a petridish you have the problem that contamination occurs more easily then by growing something small. You have to keep the dish open longer, fiddle with hair to fit in and get it on the agar, etc. Contamination means that you are growing something from the air or from your fingers instead of the bacterium of fungi you were aiming for. When you inoculate things in petridishes you try to work as sterile as possible with a gasburner and by cleaning all your utensils with alcohol. So even though I was afraid for contamination, the outcome was quite good. <br><br> 
 <img src="images/IMG_9479.jpg"><br>
 <img src="images/IMG_9781.jpg"><br>
 <img src="images/IMG_9787.jpg"><br>
 <br>
-Next I <a href="http://www.wired.co.uk/news/archive/2009-06/01/the-parts-of-the-human-body-bacteria-love-to-live-in">read</a> that the most diversity of microbes live on your forearm. On average, 44 different types of bacteria reside on the forearm, compared with 19 species living behind the ear. So I took some samples of my friendly costudents.<br><br>
+Next I <a href="http://www.wired.co.uk/news/archive/2009-06/01/the-parts-of-the-human-body-bacteria-love-to-live-in">read</a> that the most diversity of microbes live on your forearm. On average, 44 different types of bacteria reside on the forearm, compared with 19 species living behind the ear. So I took some samples of my friendly costudents forearms. <br><br>
 <img src="images/IMG_0141.jpg"><br>
 From the arm of Erwin <br>
 <img src="images/IMG_0145.jpg"><br>
 From the arm of myself<br>
 <img src="images/IMG_0161.jpg"><br>
 And the arm of Manon<br>
-In the end I decided that the best way to make a portrait would be to get a sample from all the parts of the body. That was not feasible. Instead, for the final portraits, I took a sample of the forearm, some saliva and a hair. These are the final portraits from the people available at that time in de Waag. There is a problem with these portraits, they can not be complete, because not all organisms will grow in a petridish. Actually, most of them wont grow in a petridish, so what we see in these portraits is just a small sample of the amazing bioactivity on and in our bodies. I will keep working on this project, and I will keep you posted on my other website.<br>
-<h3>
-<a id="Final Portraits" class="anchor" href="#Final Portraits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Final Portraits</h3>
+
+<h3><a id="Final Portraits" class="anchor" href="#Final Portraits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Final Portraits</h3>
+In the end I decided that the best way to make a portrait would be to get a sample from all the parts of the body. That was not feasible. Instead, for the final portraits, I took a sample of the forearm, some saliva and a hair. The following pictures are the final portraits from the people available at that time in de Waag. There is a problem with these portraits, they can not be complete, because not all organisms will grow in a petridish. Actually, most of them wont grow in a petridish, so what we see in these portraits is just a small sample of the amazing bioactivity on and in our bodies. My aim is to do more research on this subject and to keep working on these portraits. <br>
+
+
 <img src="images/IMG_0153.jpg"><br>
 Portrait of Pieter<br>
 <img src="images/IMG_0374.jpg"><br>
