--- a/portraits.html
+++ b/portraits.html
@@ -55,7 +55,7 @@ From the arm of myself<br>
 And the arm of Manon<br>
 
 <h3><a id="Final Portraits" class="anchor" href="#Final Portraits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Final Portraits</h3>
-In the end I decided that the best way to make a portrait would be to get a sample from all the parts of the body. That was not feasible. Instead, for the final portraits, I took a sample of the forearm, some saliva and a hair. The following pictures are the final portraits from the people available at that time in de Waag. There is a problem with these portraits, they can not be complete, because not all organisms will grow in a petridish. Actually, most of them wont grow in a petridish, so what we see in these portraits is just a small sample of the amazing bioactivity on and in our bodies. My aim is to do more research on this subject and to keep working on these portraits. <br>
+In the end I decided that the best way to make a portrait would be to get a sample from all the parts of the body. That was not feasible. Instead, for the final portraits, I took a sample of the forearm, some saliva and a hair. The following pictures are the final portraits from the people available at that time in de Waag. There is a problem with these portraits, they can not be complete, because not all organisms will grow in a petridish. Actually, most of them wont grow in a petridish, so what we see in these portraits is just a small sample of the amazing bioactivity on and in our bodies. My aim is to do more research on this subject and to keep working on these portraits: <br><br>
 
 
 <img src="images/IMG_0153.jpg"><br>
