--- a/portraits.html
+++ b/portraits.html
@@ -67,7 +67,7 @@ Portrait of Manon<br>
 <img src="images/IMG_0411.jpg"><br>
 Portrait of myself<br>
 <br>
-I have spent a lot of time photographing the details of the growing portraits, some of them you can see below. I am planning to make a little book with them. A long time ago I made another little <a href="http://margotvanham.wix.com/patterns">book</a> about revolving patterns in nature, where I play with the concept of micro and macro patterns and will do something similar with the pictures of these microbes. The close-ups were made possible because <a href="http://www.basuterwijk.com/#!/index">Bas Uterwijk</a> was so kind to lend me his macrolens. Thanks again Bas ;).<br>
+I have spent a lot of time photographing the details of the growing portraits, some of them you can see below. I am planning to make a little book with them. A long time ago I made another little <a href="http://margotvanham.wix.com/patterns">book</a> about revolving patterns in nature, where I play with the concept of micro and macro patterns and will do something similar with the pictures of these microbes. The close-ups were made possible because <a href="http://www.basuterwijk.com/#!/index">Bas Uterwijk</a> was so kind to lend me his macrolens. Thanks again Bas ;).<br><br>
 <h3>
 <a id="Details" class="anchor" href="#Details" aria-hidden="true"><span class="octicon octicon-link"></span></a>Details</h3>
 <img src="images/IMG_0103.jpg"><br>
